Fix flex layout of boxes and descriptions

--- a/style.css
+++ b/style.css
@@ -66,13 +66,13 @@ a {
 .top-button {
     width: 130px;
     height: 40px;
-    font-weight: 900px;
+    font-weight: bold;
     font-size: 18px;
     color: #f9faf8;
     
     background-color: #3882f6;
     border-color:#3882f6;
-    border-radius: 12%;
+    border-radius: 11%;
 }
 
 .big-img {
@@ -89,7 +89,38 @@ a {
 }
 
 .summary {
-    background-color: #f9faf8;
+    background-color: #fff;
+    text-align: center;
+    padding: 50px;
+    margin-bottom: 36px;
+}
+
+.boxes {
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+    margin-bottom: 20px;
+}
+
+.box {
+    width: 165px;
+    height: 165px;
+    border: 4px solid #3882f6;
+    border-radius: 10%;
+    margin-bottom: 8px;
+}
+
+.information {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 800;
+    margin-bottom: 50px;
+}
+
+.description {
+    max-width: 165px;
+    color: #555b5f;
+    font-size: 18px;
 }
 
 .message {
@@ -104,4 +135,3 @@ a {
     background-color: #1f2937;
 }
 
-/* make widths for placeholder */
